--- a/HTML/insidecomapp.html
+++ b/HTML/insidecomapp.html
@@ -56,7 +56,7 @@
 
   <div class="container-fluid" style="background-color: lightgray;">
 
-    <h2 class="text-start text-light ms-5 fs-2">Front-End Development</h2>
+    <h2 class="text-start text-light ms-5 fs-2">Computer Application</h2>
     
     <p class="text-end me-5 t-left">In This Course</p>
 
