--- a/HTML/insideappdev.html
+++ b/HTML/insideappdev.html
@@ -62,7 +62,7 @@
 
     <div class="container">
         <!-- Other elements go here -->
-        <p class="lead text-end me-1 fw-bold" style="font-size: 1rem;">C++</p>
+        <p class="lead text-end me-1 fw-bold" style="font-size: 1rem; color: hotpink">C++</p>
     </div>
     
     <p class="text-start text-dark ms-5 lh-base">In app development you will be learning on how to build an app for both android and Ios,
