--- a/HTML/insidebackenddev.html
+++ b/HTML/insidebackenddev.html
@@ -62,7 +62,7 @@
 
     <div class="container">
         <!-- Other elements go here -->
-        <p class="lead text-end me-1 fw-bold" style="font-size: 1rem;">PHP</p>
+        <p class="lead text-end me-1 fw-bold" style="font-size: 1rem; color: hotpink">PHP</p>
     </div>
     
     <p class="text-start text-dark ms-5 lh-base">This course is design to train programmers in building servers. Server is a database where 
