--- a/HTML/insideserver.html
+++ b/HTML/insideserver.html
@@ -62,7 +62,7 @@
 
     <div class="container">
         <!-- Other elements go here -->
-        <p class="lead text-end me-1 fw-bold" style="font-size: 1rem;">Mysql or Django</p>
+        <p class="lead text-end me-1 fw-bold" style="font-size: 1rem; color: hotpink">Mysql or Django</p>
     </div>
     
     <p class="text-start text-dark ms-5 lh-base">By chosing this app development course, you'll gain valuable skills that can help you stand out in
