--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -27,16 +27,16 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link" href="abtus.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Courses</a>
+                <a class="nav-link" href="courses.html">Courses</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link" href="">Contact Us</a>
               </li> 
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -67,7 +67,7 @@
 
             <div class="d-flex justify-content-between mt-4 ms-4 pe-5">
                 <small class="card-text text-body-secondary d-block d-sm-inline responsive-small">Program Duration: 1 Month</small>
-                <i class="bi bi-chevron-right" style="font-size: 1.3rem;"></i>              
+                <a href="insidefrnend.html"><i class="bi bi-chevron-right" style="font-size: 1.3rem;"></i> </a>             
             </div>
             
             <small class="card-text mt-4 ms-4 pe-5"> Tuition:#40,000</small>
@@ -87,7 +87,7 @@
 
               <div class="d-flex justify-content-between mt-4 ms-4 pe-5">
               <small class="card-text">Program Duration: 1 Month</small>
-              <i class="bi bi-chevron-right" style="font-size: 1.3rem;"></i>
+              <a href="insideappdev.html"><i class="bi bi-chevron-right" style="font-size: 1.3rem;"></i></a>
             </div>
 
               <small class="card-text mt-4 ms-4 pe-5"> Tuition:#60,000</small>
@@ -106,7 +106,7 @@
 
               <div class="d-flex justify-content-between mt-4 ms-4 pe-5">
               <small class="card-text">Program Duration: 1 Month</small>
-              <i class="bi bi-chevron-right" style="font-size: 1.3rem;"></i>
+              <a href="insideserver.html"><i class="bi bi-chevron-right" style="font-size: 1.3rem;"></i></a>
             </div>
 
               <small class="card-text mt-4 ms-4 pe-5"> Tuition:#100,000</small>
@@ -131,7 +131,7 @@
 
             <div class="d-flex justify-content-between mt-4 ms-4 pe-5">
               <small class="card-text">Program Duration: 1 Month</small>
-              <i class="bi bi-chevron-right" style="font-size: 1.3rem;"></i>
+              <a href="insidegam.html"><i class="bi bi-chevron-right" style="font-size: 1.3rem;"></i></a>
             </div>
 
             <small class="card-text mt-4 ms-4 pe-5"> Tuition:#90,000</small>
@@ -152,7 +152,7 @@
 
               <div class="d-flex justify-content-between mt-4 ms-4 pe-5">
               <small class="card-text">Program Duration: 1 Month</small>
-              <i class="bi bi-chevron-right" style="font-size: 1.3rem;"></i>
+              <a href="insideanimation.html"><i class="bi bi-chevron-right" style="font-size: 1.3rem;"></i></a>
             </div>
 
               <small class="card-text mt-4 ms-4 pe-5"> Tuition:#130,000</small>
@@ -172,7 +172,7 @@
 
               <div class="d-flex justify-content-between mt-4 ms-4 pe-5">
               <small class="card-text">Program Duration: 1 Month</small>
-              <i class="bi bi-chevron-right" style="font-size: 1.3rem;"></i>
+              <a href="C:\Users\PC\Documents\resc2s\HTML\insidecybsecurity.html"><i class="bi bi-chevron-right" style="font-size: 1.3rem;"></i></a>
             </div>
 
               <small class="card-text mt-4 ms-4 pe-5"> Tuition:#130,000</small>
@@ -198,7 +198,7 @@
 
             <div class="d-flex justify-content-between mt-4 ms-4 pe-5">
               <small class="card-text">Program Duration: 1 Month</small>
-              <i class="bi bi-chevron-right" style="font-size: 1.3rem;"></i>
+              <a href="insidebackenddev.html"><i class="bi bi-chevron-right" style="font-size: 1.3rem;"></i></a>
             </div>
             
             <small class="card-text mt-4 ms-4 pe-5"> Tuition:#70,000</small>
@@ -219,7 +219,7 @@
 
               <div class="d-flex justify-content-between mt-4 ms-4 pe-5">
                 <small class="card-text">Program Duration: 1 Month</small>
-                <i class="bi bi-chevron-right" style="font-size: 1.3rem;"></i>
+                <a href="insidedigitmar.html"><i class="bi bi-chevron-right" style="font-size: 1.3rem;"></i></a>
               </div>
 
               <small class="card-text mt-4 ms-4 pe-5"> Tuition:#80,000</small>
@@ -239,7 +239,7 @@
 
               <div class="d-flex justify-content-between mt-4 ms-4 pe-5">
               <small class="card-text">Program Duration: 1 Month</small>
-              <i class="bi bi-chevron-right" style="font-size: 1.3rem;"></i>
+              <a href="insidecomapp.html"><i class="bi bi-chevron-right" style="font-size: 1.3rem;"></i></a>
             </div>
 
               <small class="card-text mt-4 ms-4 pe-5"> Tuition:#25,000</small>
