--- a/HTML/index.html
+++ b/HTML/index.html
@@ -24,9 +24,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav mx-auto">
-              <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Courses</a></li>
+              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="abtus.html">About Us</a></li>
+              <li class="nav-item"><a class="nav-link" href="courses.html">Courses</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li> 
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -81,16 +81,16 @@
             </div>
           </div>
 
-         <div class="container mt-3 text-left me-5">
+         <a href="courses.html"><div class="container mt-3 text-left me-5">
              <div class="row justify-content-end">
                  <div class="col-lg-4 col-md-6 col-12">
                      <button class="btn btn-light text-dark blinking-btn rounded-pill py-2 wide-button height-button mt-custom btn-right" 
                        style="width: 70%; height: 9%;">
-                         Create Account <i class="bi bi-arrow-right"></i>
+                         Courses <i class="bi bi-arrow-right"></i>
                      </button>  
                  </div>
              </div>
-         </div>
+         </div></a>
          
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -223,7 +223,7 @@
                    <div class="container mt-3 text-left">
                        <div class="row justify-content-start">
                            <div class="col-12 col-md-6 col-lg-4">
-                               <button class="btn btn-light text-dark blinking-btn rounded-pill w-100 py-2 wide-button height-button">
+                             <button class="btn btn-light text-dark blinking-btn rounded-pill w-100 py-2 wide-button height-button">
                                    Create Account
                                </button>
                            </div>
