--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="courses.html">Courses</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Contact Us</a>
+                <a class="nav-link" href="contact_us.html">Contact Us</a>
               </li> 
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
