--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,7 +27,7 @@
               <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
               <li class="nav-item"><a class="nav-link" href="abtus.html">About Us</a></li>
               <li class="nav-item"><a class="nav-link" href="courses.html">Courses</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li> 
+              <li class="nav-item"><a class="nav-link" href="contact_us.html">Contact Us</a></li> 
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Instructors
