--- a/HTML/abtus.html
+++ b/HTML/abtus.html
@@ -44,8 +44,8 @@
                   Instructors
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Programming</a></li>
-                  <li><a class="dropdown-item" href="#">Others</a></li>
+                  <li><a class="dropdown-item" href="instructors.html">Programming</a></li>
+                  <li><a class="dropdown-item" href="other_instructors.html">Others</a></li>
                 </ul>
               </li>
             </ul>
@@ -211,3 +211,5 @@
             </div>
         </div>
     </footer>
+  </body>
+</html>
