--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -43,8 +43,8 @@
                   Instructors
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Programming</a></li>
-                  <li><a class="dropdown-item" href="#">Others</a></li>
+                  <li><a class="dropdown-item" href="instructors.html">Programming</a></li>
+                  <li><a class="dropdown-item" href="other_instructors.html">Others</a></li>
                 </ul>
               </li>
             </ul>
