--- a/HTML/insidegam.html
+++ b/HTML/insidegam.html
@@ -143,13 +143,13 @@
         <footer class="footer" style="background-color:#333; color:white; padding:20px;">
           <div class="container" style="background-color: #333;">
             <div class="row">
-              <!-- Company Section -->
-              <div class="col-md-4 mb-3">
+                 <!-- Company Section -->
+                 <div class="col-md-4 mb-3">
                   <h5>Quick Links</h5>
                   <ul class="list-unstyled" style="margin-bottom:16px;">
-                    <li>About Us</li>
-                    <li>Contact Us</li>
-                    <li>Community Program</li>
+                    <li><a href="abtus.html">About Us</li></a>
+                    <li><a href="contact_us.html">Contact Us</li></a>
+                    <li><a href="community.html">Community Program</li></a>
                   </ul>
                 </div>
               
@@ -168,10 +168,10 @@
               <div class="col-md-4 mb-3">
                   <h5>Quick Links</h5>
                   <ul class="list-unstyled" style="margin-bottom:16px;">
-                    <li>Refunds</li>
-                    <li>Disclaimer</li>
-                    <li>Privacy Policy</li>
-                    <li>Terms Of Use</li>
+                    <li><a href="refunds.html">Refunds</li></a>
+                    <li><a href="disclamier.html">Disclaimer</li></a>
+                    <li><a href="privacy_policy.html">Privacy Policy</li></a>
+                    <li><a href="terms_cond.html">Terms Of Use</li></a>
                   </ul>
               </div>
 
