--- a/HTML/abtus.html
+++ b/HTML/abtus.html
@@ -28,7 +28,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Homr</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="abtus.html">About Us</a>
